kanc/src/tests/sample_code/should_fail/single_file/type_check/missing_match_case/missing_multiple.k
type Boolish {
    .True: Boolish,
    .False: Boolish,
    .Maybe: Boolish,
}

let foo = match Boolish.True {
    .True => Boolish.False,
};
